--- a/5 - BabelJS Navbar/5.1 - BabelJS SPA/index.html
+++ b/5 - BabelJS Navbar/5.1 - BabelJS SPA/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Page</title>
+    <title>Navbar Example</title>
 </head>
 <body>
     <!-- Navbar -->
     <div id="navbar"></div>
-    <h1>About Page</h1>
-    
+
     <!-- Load React first -->
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
