make modification by removing .dropdown-toggle on the clothing's sub-sub-menu

--- a/5 - BabelJS Navbar/5.3 - Multipage Sub-Sub-Menu no BabelJS/index.html
+++ b/5 - BabelJS Navbar/5.3 - Multipage Sub-Sub-Menu no BabelJS/index.html
@@ -35,7 +35,7 @@
                             
                             <!-- Level 2 with submenu -->
                             <li class="dropdown-submenu">
-                                <a class="dropdown-item dropdown-toggle" href="#">Clothing</a>
+                                <a class="dropdown-item" href="#">Clothing</a>
                                 <ul class="dropdown-menu">
                                     <!-- Level 3 items -->
                                     <li><a class="dropdown-item" href="#">Men's</a></li>
