Add new 5 images of pokemons, and the updated index.html & randomPokemon.js

--- a/6 - Pokemon Random Number/index.html
+++ b/6 - Pokemon Random Number/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="randomPokemon"></div>
+    <div id="image-container"></div>
     <script src="randomPokemon.js"></script>
 </body>
 </html>
